Update and rename conversion.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversion</title>
-    <link rel="stylesheet" href="conversion.css">
-    <link rel="icon" type="image/jpg" href="/portfolio/images-src/fabicon.jpg">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpg" href="fabicon.jpg">
 </head>
 <body>
     
@@ -46,6 +46,6 @@
 
 
 
-<script src="conversion.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
